styles/main.css
/* MOBILE FIRST */

/* GENERAL STYLES */
* {
  box-sizing: border-box;
}

body:not(footer) {
  max-width: 100vw;
  background: #fdf9e6;
}

h1,
h2,
h3 {
  font-family: "Plantagenet Cherokee", Arial, sans-serif;
  padding: 0 0.5rem;
  color: #5d445d;
}

p,
a,
ul {
  font-family: "Source Sans Pro", sans-serif;
}

p:not(#temp-wrapper p),
a,
ul {
  color: #00202a;
}

a:hover {
  text-decoration: underline;
}

a:active,
a:focus {
  border-radius: #f2f7fc 1px solid;
}

h1 {
  font-size: 3rem;
}

h2 {
  font-size: 1.5rem;
  margin: 0.5em 0 0.75em 0;
}

h3 {
  font-size: 1.5em;
}

p,
ul li {
  margin-bottom: 0.5em;
  line-height: 1.2;
  font-size: 1.2em;
  padding: 0.3em;
}

ul li {
  list-style: disc;
  margin-left: 2em;
}

strong {
  font-weight: 800;
}

/*------------------------*/

/*HEADER STYLES */

header {
  min-height: 30vh;
}

header h1 {
  position: relative;
  z-index: 1;
  line-height: 50px;
  top: 12px;
}

/* toggles the h1 to z-index 0 when the mobile menu is toggled */
h1.z-toggle {
  z-index: 0 !important;
}

/* Nav styles */
.desktop-nav-wrapper {
  display: none;
  background: #a28fb0;
}

.mobile-nav-wrapper {
  background: #a28fb0;
  padding-bottom: 0.1em;
  margin-bottom: 1em;
}

.mobile-nav-links {
  width: 100%;
  z-index: 1;
  position: absolute;
  display: none;
  background-color: inherit;
  min-width: 100vw;
  height: auto;
  padding: 15px 10px;
}

.mobile-nav-wrapper ul li {
  list-style-type: none;
  margin: 0;
}

.mobile-nav-wrapper li {
  padding: 1em;
}

.mobile-nav-links a {
  color: #00202a;
  text-decoration: none;
}

/*Burger menu*/

.toggled {
  /*Menu appears when burger icon clicked*/
  top: 85px;
  display: block !important;
  margin-bottom: 10px;
}

button.menu:focus {
  outline: none;
  border: 1px black solid;
  border-radius: 10px;
}

button.menu {
  background: transparent;
  border: none;
  cursor: pointer;
  display: flex;
  padding: 0;
  margin-bottom: 0.76em;
}

.line {
  fill: none; /*This is to remove any fill so you just see the lines*/
  stroke: #f2f7fc;
  stroke-width: 2;
  transition: stroke-dashoffset 400ms;
}
.line1 {
  stroke-dasharray: 60 207;
  stroke-width: 6;
}
.line2 {
  stroke-dasharray: 60 60;
  stroke-width: 6;
}
.line3 {
  stroke-dasharray: 60 207;
  stroke-width: 6;
}
.opened .line1 {
  stroke-dasharray: 90 207;
  stroke-dashoffset: -134;
  stroke-width: 6;
}
.opened .line2 {
  stroke-dasharray: 1 60;
  stroke-dashoffset: -30;
  stroke-width: 6;
}
.opened .line3 {
  stroke-dasharray: 90 207;
  stroke-dashoffset: -134;
  stroke-width: 6;
}

/*---------------------*/

/* MAIN BODY STYLES */
main {
  min-height: calc(100vh - 30vh); /*So the footer stays at the bottom*/
}

button:not(button.menu) {
  background: #eed9fc;
  display: block;
  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 3px;
  border: none;
  height: auto;
  padding: 1em 1.5em;
  outline: none;
  font-size: 1.2em;
}

button {
  outline: #545454;
  color: #545454;
}

button:not(.menu):hover,
button:not(.menu):active {
  background: #8f9fb0;
  outline: #a28fb0;
  color: #5d445d;
}

button:hover {
  cursor: pointer;
}

button a:hover {
  text-decoration: none;
}

/*-------------------------*/
/*FOOTER STYLES */

footer {
  display: flex;
  flex-direction: column-reverse;
  padding: 0.75em;
  min-height: 5vh;
}

footer p {
  text-align: right;
  align-content: flex-end;
  text-transform: uppercase;
}

@media screen and (min-width: 720px) {
  button.menu,
  .mobile-nav-wrapper a {
    display: none;
  }

  .mobile-nav-wrapper {
    margin: 0;
  }

  nav.desktop-nav-wrapper {
    display: flex;
    justify-content: center;
    padding: 1.5em;
  }

  nav.desktop-nav-wrapper a {
    padding: 0 2em;
    color: #00202a;
    font-size: 1.25em;
    text-decoration: none;
    font-weight: 600;
  }

  h1 {
    text-align: center;
  }
}

